Fix auto-scrolling and tail last thirty lines by default.
This commit makes sure that the browser is not overwhelmed with logs
from big files. It auto-scrolls by default but if you manually move the
scrollbar it will stay fixed in that position.

--- a/frontend/assets/sass/nomad-ui.scss
+++ b/frontend/assets/sass/nomad-ui.scss
@@ -113,3 +113,8 @@ dl {
 	background-size: initial;
 	background-position: initial;
 }
+
+.file-content-hr {
+    margin-bottom: 0px;
+    margin-top: 15px;
+}
